# basic-snake-game

./: .gitignore  CONTRIBUTING.md  README.md  basic snake game.py  main.py  pyproject.toml  snake-game.py
.github/workflows/: ci.yml
docs/: ADR.md
src/snake_game/: __init__.py  app.py  config.py  core.py  persistence.py
tests/: test_app_smoke.py  test_core.py  test_persistence.py
