[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-game-remastered"
version = "1.0.0"
description = "A polished pygame snake game that stays close to the original look."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]
